--- a/final_report/src/main/AndroidManifest.xml
+++ b/final_report/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.final_report">
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <!--
@@ -11,10 +12,12 @@
     -->
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-  <uses-feature android:name="android.hardware.camera" />
-  <uses-permission android:name="android.permission.CAMERA" />
-  <uses-permission android:name="android.hardware.camera.autofocus" />
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-feature android:name="android.hardware.camera"/>
+
+  <uses-permission android:name="android.permission.CAMERA"/>
+  <uses-permission android:name="android.hardware.camera.autofocus"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
@@ -24,6 +27,8 @@
     <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
+
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
@@ -52,6 +57,8 @@
 
     <activity android:name=".NewReportActivity"/>
     <activity android:name=".CameraActivity">
+    </activity>
+    <activity android:name=".StopWatch">
     </activity>
   </application>
 
